Made the targets equal "_blank"

--- a/client/public/burgas-map.html
+++ b/client/public/burgas-map.html
@@ -11,18 +11,18 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Бургас.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Желязна руда до Малко Търново" title="Желязна руда до Малко Търново" href="" coords="403,485,425,488,414,456,409,467" shape="poly">
-    <area target="" alt="Медна руда до Малко Търново" title="Медна руда до Малко Търново" href="" coords="369,461,405,445" shape="rect">
-    <area target="" alt="Медна руда до Созопол" title="Медна руда до Созопол" href="" coords="350,301,387,285" shape="rect">
-    <area target="" alt="Медна руда до Бургас" title="Медна руда до Бургас" href="" coords="278,279,315,263" shape="rect">
-    <area target="" alt="Мрамор до Малко Търново" title="Мрамор до Малко Търново" href="" coords="337,460,361,437" shape="rect">
-    <area target="" alt="Кафяви въглища до Бургас" title="Антрацитни въглища до Бургас" href="" coords="329,191,355,165" shape="rect">
-    <area target="" alt="Варовик до Айтос" title="Варовик до Айтос" href="" coords="292,150,329,132" shape="rect">
-    <area target="" alt="Малко Търново" title="Малко Търново" href="https://malko-tarnovo.com/" coords="375,488,17" shape="circle">
-    <area target="" alt="Созопол" title="Созопол" href="https://sozopol.bg/" coords="410,295,16" shape="circle">
-    <area target="" alt="Айтос" title="Айтос" href="https://aytos.bg/" coords="272,152,16" shape="circle">
-    <area target="" alt="Карнобат" title="Карнобат" href="https://www.karnobat-ob.bg/" coords="195,176,16" shape="circle">
-    <area target="" alt="Бургас" title="Бургас" href="https://www.burgas.bg/bg/" coords="340,282,353,253,383,237,354,222,339,195,325,222,296,237,324,251" shape="poly">
+    <area target="_blank" alt="Желязна руда до Малко Търново" title="Желязна руда до Малко Търново" href="" coords="403,485,425,488,414,456,409,467" shape="poly">
+    <area target="_blank" alt="Медна руда до Малко Търново" title="Медна руда до Малко Търново" href="" coords="369,461,405,445" shape="rect">
+    <area target="_blank" alt="Медна руда до Созопол" title="Медна руда до Созопол" href="" coords="350,301,387,285" shape="rect">
+    <area target="_blank" alt="Медна руда до Бургас" title="Медна руда до Бургас" href="" coords="278,279,315,263" shape="rect">
+    <area target="_blank" alt="Мрамор до Малко Търново" title="Мрамор до Малко Търново" href="" coords="337,460,361,437" shape="rect">
+    <area target="_blank" alt="Кафяви въглища до Бургас" title="Антрацитни въглища до Бургас" href="" coords="329,191,355,165" shape="rect">
+    <area target="_blank" alt="Варовик до Айтос" title="Варовик до Айтос" href="" coords="292,150,329,132" shape="rect">
+    <area target="_blank" alt="Малко Търново" title="Малко Търново" href="https://malko-tarnovo.com/" coords="375,488,17" shape="circle">
+    <area target="_blank" alt="Созопол" title="Созопол" href="https://sozopol.bg/" coords="410,295,16" shape="circle">
+    <area target="_blank" alt="Айтос" title="Айтос" href="https://aytos.bg/" coords="272,152,16" shape="circle">
+    <area target="_blank" alt="Карнобат" title="Карнобат" href="https://www.karnobat-ob.bg/" coords="195,176,16" shape="circle">
+    <area target="_blank" alt="Бургас" title="Бургас" href="https://www.burgas.bg/bg/" coords="340,282,353,253,383,237,354,222,339,195,325,222,296,237,324,251" shape="poly">
 </map>
 
 </div>
