--- a/client/public/lovech-map.html
+++ b/client/public/lovech-map.html
@@ -10,11 +10,11 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Ловеч.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Желязна руда" title="Желязна руда" href="" coords="385,362,405,363,395,344" shape="poly">
-    <area target="" alt="Троян" title="Троян" href="https://www.troyan.bg/bg/" coords="367,330,10" shape="circle">
-    <area target="" alt="Тетевен" title="Тетевен" href="https://www.teteven.bg/" coords="169,313,10" shape="circle">
-    <area target="" alt="Угърчин" title="Угърчин" href="https://ugarchin.bg/" coords="262,216,9" shape="circle">
-    <area target="" alt="Ловеч" title="Ловеч" href="https://www.lovech.bg/bg/" coords="372,185,378,165,397,157,378,149,373,131,363,147,345,157,362,164" shape="poly">
+    <area target="_blank" alt="Желязна руда" title="Желязна руда" href="" coords="385,362,405,363,395,344" shape="poly">
+    <area target="_blank" alt="Троян" title="Троян" href="https://www.troyan.bg/bg/" coords="367,330,10" shape="circle">
+    <area target="_blank" alt="Тетевен" title="Тетевен" href="https://www.teteven.bg/" coords="169,313,10" shape="circle">
+    <area target="_blank" alt="Угърчин" title="Угърчин" href="https://ugarchin.bg/" coords="262,216,9" shape="circle">
+    <area target="_blank" alt="Ловеч" title="Ловеч" href="https://www.lovech.bg/bg/" coords="372,185,378,165,397,157,378,149,373,131,363,147,345,157,362,164" shape="poly">
 </map>
 
 </div>
