--- a/client/public/shumen-map.html
+++ b/client/public/shumen-map.html
@@ -10,15 +10,15 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Шумен.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Варовик до Шумен" title="Варовик до Шумен" href="" coords="230,373,274,389" shape="rect">
-    <area target="" alt="Каолин до Каолиново" title="Каолин до Каолиново" href="" coords="289,45,12" shape="circle">
-    <area target="" alt="Върбица" title="Върбица" href="https://www.varbitsa.org/" coords="83,537,14" shape="circle">
-    <area target="" alt="Велики Преслав" title="Велики Преслав" href="https://velikipreslav.bg/wp/" coords="164,417,15" shape="circle">
-    <area target="" alt="Каспичан" title="Каспичан" href="https://bg.wikipedia.org/wiki/%D0%9A%D0%B0%D1%81%D0%BF%D0%B8%D1%87%D0%B0%D0%BD" coords="343,324,15" shape="circle">
-    <area target="" alt="Нови пазар" title="Нови пазар" href="https://novipazar.acstre.com/" coords="358,281,15" shape="circle">
-    <area target="" alt="Венец" title="Венец" href="https://venets.bg/" coords="220,147,15" shape="circle">
-    <area target="" alt="Каолиново" title="Каолиново" href="https://kaolinovo.bg/" coords="299,95,14" shape="circle">
-    <area target="" alt="Шумен" title="Шумен" href="https://www.shumen.bg/" coords="215,375,228,349,254,336,228,322,216,296,201,323,176,335,201,348" shape="poly">
+    <area target="_blank" alt="Варовик до Шумен" title="Варовик до Шумен" href="" coords="230,373,274,389" shape="rect">
+    <area target="_blank" alt="Каолин до Каолиново" title="Каолин до Каолиново" href="" coords="289,45,12" shape="circle">
+    <area target="_blank" alt="Върбица" title="Върбица" href="https://www.varbitsa.org/" coords="83,537,14" shape="circle">
+    <area target="_blank" alt="Велики Преслав" title="Велики Преслав" href="https://velikipreslav.bg/wp/" coords="164,417,15" shape="circle">
+    <area target="_blank" alt="Каспичан" title="Каспичан" href="https://bg.wikipedia.org/wiki/%D0%9A%D0%B0%D1%81%D0%BF%D0%B8%D1%87%D0%B0%D0%BD" coords="343,324,15" shape="circle">
+    <area target="_blank" alt="Нови пазар" title="Нови пазар" href="https://novipazar.acstre.com/" coords="358,281,15" shape="circle">
+    <area target="_blank" alt="Венец" title="Венец" href="https://venets.bg/" coords="220,147,15" shape="circle">
+    <area target="_blank" alt="Каолиново" title="Каолиново" href="https://kaolinovo.bg/" coords="299,95,14" shape="circle">
+    <area target="_blank" alt="Шумен" title="Шумен" href="https://www.shumen.bg/" coords="215,375,228,349,254,336,228,322,216,296,201,323,176,335,201,348" shape="poly">
 </map>
 </div>
   </body>
