--- a/client/public/silistra-map.html
+++ b/client/public/silistra-map.html
@@ -10,11 +10,11 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Силистра.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Дулово" title="Дулово" href="https://dulovo.bg/" coords="339,204,10" shape="circle">
-    <area target="" alt="Алафатар" title="Алафатар" href="http://alfatar.egov.bg/ALFATAR/home.nsf/pages/bg/home?OpenDocument" coords="418,139,10" shape="circle">
-    <area target="" alt="Главница" title="Главница" href="https://old.glavinitsa.bg/web/index.php" coords="227,161,10" shape="circle">
-    <area target="" alt="Тутракан" title="Тутракан" href="https://tutrakan.egov.bg/TUTRAKAN/home.nsf/pages/bg/home?OpenDocument" coords="132,96,10" shape="circle">
-    <area target="" alt="Силистра" title="Силистра" href="https://www.portal-silistra.eu/silistra" coords="393,93,400,77,413,71,400,63,393,50,386,62,373,70,385,77" shape="poly">
+    <area target="_blank" alt="Дулово" title="Дулово" href="https://dulovo.bg/" coords="339,204,10" shape="circle">
+    <area target="_blank" alt="Алафатар" title="Алафатар" href="http://alfatar.egov.bg/ALFATAR/home.nsf/pages/bg/home?OpenDocument" coords="418,139,10" shape="circle">
+    <area target="_blank" alt="Главница" title="Главница" href="https://old.glavinitsa.bg/web/index.php" coords="227,161,10" shape="circle">
+    <area target="_blank" alt="Тутракан" title="Тутракан" href="https://tutrakan.egov.bg/TUTRAKAN/home.nsf/pages/bg/home?OpenDocument" coords="132,96,10" shape="circle">
+    <area target="_blank" alt="Силистра" title="Силистра" href="https://www.portal-silistra.eu/silistra" coords="393,93,400,77,413,71,400,63,393,50,386,62,373,70,385,77" shape="poly">
 </map>
 
 </div>
