--- a/client/public/smolyan-map.html
+++ b/client/public/smolyan-map.html
@@ -11,18 +11,18 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Смолян.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Флуроит над Девин и Чепеларе" title="Флуроит над Девин и Чепеларе" href="" coords="286,120,321,136" shape="rect">
-    <area target="" alt="Многометална руда в Рудозем" title="Многометална руда в Рудозем" href="" coords="455,415,10" shape="circle">
-    <area target="" alt="Оловно-цинкова руда до Смолян" title="Оловно-цинкова руда до Смолян" href="" coords="372,392,11" shape="circle">
-    <area target="" alt="Оловно-цинкова руда на юг от Мадан" title="Оловно-цинкова руда на юг от Мадан" href="" coords="532,420,11" shape="circle">
-    <area target="" alt="Оловно-цинкова руда на север от Мадан" title="Оловно-цинкова руда на север от Мадан" href="" coords="542,346,11" shape="circle">
-    <area target="" alt="Златоград" title="Златоград" href="https://www.zlatograd.bg/" coords="611,480,16" shape="circle">
-    <area target="" alt="Неделино" title="Неделино" href="https://nedelino.bg/" coords="607,416,15" shape="circle">
-    <area target="" alt="Мадан" title="Мадан" href="https://www.madan.bg/" coords="547,394,14" shape="circle">
-    <area target="" alt="Рудозем" title="Рудозем" href="https://www.rudozem.bg/" coords="480,401,15" shape="circle">
-    <area target="" alt="Чепеларе" title="Чепеларе" href="https://bg.wikipedia.org/wiki/%D0%A7%D0%B5%D0%BF%D0%B5%D0%BB%D0%B0%D1%80%D0%B5" coords="394,225,15" shape="circle">
-    <area target="" alt="Девин" title="Девин" href="https://www.devin.bg/" coords="237,212,16" shape="circle">
-    <area target="" alt="Смолян" title="Смолян" href="https://www.smolyan.bg/" coords="395,384,406,358,430,345,406,332,394,308,382,333,357,344,381,357" shape="poly">
+    <area target="_blank" alt="Флуроит над Девин и Чепеларе" title="Флуроит над Девин и Чепеларе" href="" coords="286,120,321,136" shape="rect">
+    <area target="_blank" alt="Многометална руда в Рудозем" title="Многометална руда в Рудозем" href="" coords="455,415,10" shape="circle">
+    <area target="_blank" alt="Оловно-цинкова руда до Смолян" title="Оловно-цинкова руда до Смолян" href="" coords="372,392,11" shape="circle">
+    <area target="_blank" alt="Оловно-цинкова руда на юг от Мадан" title="Оловно-цинкова руда на юг от Мадан" href="" coords="532,420,11" shape="circle">
+    <area target="_blank" alt="Оловно-цинкова руда на север от Мадан" title="Оловно-цинкова руда на север от Мадан" href="" coords="542,346,11" shape="circle">
+    <area target="_blank" alt="Златоград" title="Златоград" href="https://www.zlatograd.bg/" coords="611,480,16" shape="circle">
+    <area target="_blank" alt="Неделино" title="Неделино" href="https://nedelino.bg/" coords="607,416,15" shape="circle">
+    <area target="_blank" alt="Мадан" title="Мадан" href="https://www.madan.bg/" coords="547,394,14" shape="circle">
+    <area target="_blank" alt="Рудозем" title="Рудозем" href="https://www.rudozem.bg/" coords="480,401,15" shape="circle">
+    <area target="_blank" alt="Чепеларе" title="Чепеларе" href="https://bg.wikipedia.org/wiki/%D0%A7%D0%B5%D0%BF%D0%B5%D0%BB%D0%B0%D1%80%D0%B5" coords="394,225,15" shape="circle">
+    <area target="_blank" alt="Девин" title="Девин" href="https://www.devin.bg/" coords="237,212,16" shape="circle">
+    <area target="_blank" alt="Смолян" title="Смолян" href="https://www.smolyan.bg/" coords="395,384,406,358,430,345,406,332,394,308,382,333,357,344,381,357" shape="poly">
 </map>
 
 </div>
