--- a/client/public/sofia-grad-map.html
+++ b/client/public/sofia-grad-map.html
@@ -11,9 +11,9 @@
 <div class="centered-flex">
 <img class="centered-flex" src="София.jpg" usemap="#image-map" style="border: none;">
 <map name="image-map">
-  <area target="" alt="Желязна руда в село Кремиковци" title="Желязна руда в село Кремиковци" href="" coords="250,172,283,172,266,145" shape="poly">
-  <area target="" alt="Варовик във Витоша" title="Варовик във Витоша" href="" coords="159,276,205,263" shape="rect">
-  <area target="" alt="София" title="София" href="https://www.sofia.bg/" coords="196,252,199,239,206,247,214,243,221,221,226,239,235,233,245,221,238,211,238,197,244,185,237,174,224,173,205,165,203,151,211,146,216,142,200,141,189,140,189,123,181,126,168,127,163,139,174,143,159,145,148,153,138,174,144,176,144,186,132,188,137,195,130,206,138,208,128,217,134,223,146,221,157,224,167,226,172,236,180,243" shape="poly">
+  <area target="_blank" alt="Желязна руда в село Кремиковци" title="Желязна руда в село Кремиковци" href="" coords="250,172,283,172,266,145" shape="poly">
+  <area target="_blank" alt="Варовик във Витоша" title="Варовик във Витоша" href="" coords="159,276,205,263" shape="rect">
+  <area target="_blank" alt="София" title="София" href="https://www.sofia.bg/" coords="196,252,199,239,206,247,214,243,221,221,226,239,235,233,245,221,238,211,238,197,244,185,237,174,224,173,205,165,203,151,211,146,216,142,200,141,189,140,189,123,181,126,168,127,163,139,174,143,159,145,148,153,138,174,144,176,144,186,132,188,137,195,130,206,138,208,128,217,134,223,146,221,157,224,167,226,172,236,180,243" shape="poly">
 </map>
 
 </div>
