--- a/client/public/varna-map.html
+++ b/client/public/varna-map.html
@@ -10,20 +10,20 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Варна.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Варовик до Девня" title="Варовик до Девня" href="" coords="236,285,268,297" shape="rect">
-    <area target="" alt="Кварцови пясъци до Варна" title="Кварцови пясъци до Варна" href="" coords="294,278,327,289" shape="rect">
-    <area target="" alt="Природен газ до Варна (Черно море))" title="Природен газ до Варна (Черно море))" href="" coords="389,361,411,361,402,333,397,332" shape="poly">
-    <area target="" alt="Каменни соли до Провадия" title="Каменни соли до Провадия" href="" coords="193,302,204,296,218,299,218,315,205,321,192,317" shape="poly">
-    <area target="" alt="Манганова руда до Долни чифлик" title="Манганова руда до Долни чифлик" href="" coords="337,394,346,402,356,395,356,413,336,413" shape="poly">
-    <area target="" alt="Манганова руда до Аксаково" title="Манганова руда до Аксаково" href="" coords="397,175,415,175,415,157,406,165,395,157" shape="poly">
-    <area target="" alt="Бяла" title="Бяла" href="https://www.byala.org/" coords="373,444,13" shape="circle">
-    <area target="" alt="Долни чифлик" title="Долни чифлик" href="https://dolni-chiflik.acstre.com/" coords="309,391,13" shape="circle">
-    <area target="" alt="Дългопол" title="Дългопол" href="https://www.dalgopol.bg/" coords="157,349,13" shape="circle">
-    <area target="" alt="Провадия" title="Провадия" href="https://www.provadia.bg/" coords="196,277,13" shape="circle">
-    <area target="" alt="Девня" title="Девня" href="https://devnya.bg/" coords="257,249,13" shape="circle">
-    <area target="" alt="Аксаково" title="Аксаково" href="https://aksakovo.bg/" coords="343,226,13" shape="circle">
-    <area target="" alt="Вълчи дол" title="Вълчи дол" href="https://www.valchidol.bg/" coords="232,137,13" shape="circle">
-    <area target="" alt="Варна" title="Варна" href="https://www.varna.bg/" coords="386,294,396,273,415,262,396,252,386,233,376,253,356,262,375,273" shape="poly">
+    <area target="_blank" alt="Варовик до Девня" title="Варовик до Девня" href="" coords="236,285,268,297" shape="rect">
+    <area target="_blank" alt="Кварцови пясъци до Варна" title="Кварцови пясъци до Варна" href="" coords="294,278,327,289" shape="rect">
+    <area target="_blank" alt="Природен газ до Варна (Черно море))" title="Природен газ до Варна (Черно море))" href="" coords="389,361,411,361,402,333,397,332" shape="poly">
+    <area target="_blank" alt="Каменни соли до Провадия" title="Каменни соли до Провадия" href="" coords="193,302,204,296,218,299,218,315,205,321,192,317" shape="poly">
+    <area target="_blank" alt="Манганова руда до Долни чифлик" title="Манганова руда до Долни чифлик" href="" coords="337,394,346,402,356,395,356,413,336,413" shape="poly">
+    <area target="_blank" alt="Манганова руда до Аксаково" title="Манганова руда до Аксаково" href="" coords="397,175,415,175,415,157,406,165,395,157" shape="poly">
+    <area target="_blank" alt="Бяла" title="Бяла" href="https://www.byala.org/" coords="373,444,13" shape="circle">
+    <area target="_blank" alt="Долни чифлик" title="Долни чифлик" href="https://dolni-chiflik.acstre.com/" coords="309,391,13" shape="circle">
+    <area target="_blank" alt="Дългопол" title="Дългопол" href="https://www.dalgopol.bg/" coords="157,349,13" shape="circle">
+    <area target="_blank" alt="Провадия" title="Провадия" href="https://www.provadia.bg/" coords="196,277,13" shape="circle">
+    <area target="_blank" alt="Девня" title="Девня" href="https://devnya.bg/" coords="257,249,13" shape="circle">
+    <area target="_blank" alt="Аксаково" title="Аксаково" href="https://aksakovo.bg/" coords="343,226,13" shape="circle">
+    <area target="_blank" alt="Вълчи дол" title="Вълчи дол" href="https://www.valchidol.bg/" coords="232,137,13" shape="circle">
+    <area target="_blank" alt="Варна" title="Варна" href="https://www.varna.bg/" coords="386,294,396,273,415,262,396,252,386,233,376,253,356,262,375,273" shape="poly">
 </map>
 
 </div>
