--- a/client/public/yambol-map.html
+++ b/client/public/yambol-map.html
@@ -11,13 +11,13 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Ямбол.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Лигнитни въглища до Елхово" title="Лигнитни въглища до Елхово" href="" coords="221,440,242,420" shape="rect">
-    <area target="" alt="Оловно-цинкова руда в община Елхово (до границата))" title="Оловно-цинкова руда в община Елхово (до границата))" href="" coords="235,510,11" shape="circle">
-    <area target="" alt="Желязна руда в община Тунджа" title="Желязна руда в община Тунджа" href="" coords="166,322,183,322,175,298" shape="poly">
-    <area target="" alt="Болярово" title="Болярово" href="https://bolyarovo.bg/" coords="357,425,14" shape="circle">
-    <area target="" alt="Елхово" title="Елхово" href="https://elhovo.bg/" coords="240,375,15" shape="circle">
-    <area target="" alt="Стралджа" title="Стралджа" href="https://straldzha.bg/" coords="294,100,15" shape="circle">
-    <area target="" alt="Ямбол" title="Ямбол" href="https://yambol.bg/" coords="195,212,207,190,229,177,205,165,195,144,185,167,162,177,184,189,189,199" shape="poly">
+    <area target="_blank" alt="Лигнитни въглища до Елхово" title="Лигнитни въглища до Елхово" href="" coords="221,440,242,420" shape="rect">
+    <area target="_blank" alt="Оловно-цинкова руда в община Елхово (до границата))" title="Оловно-цинкова руда в община Елхово (до границата))" href="" coords="235,510,11" shape="circle">
+    <area target="_blank" alt="Желязна руда в община Тунджа" title="Желязна руда в община Тунджа" href="" coords="166,322,183,322,175,298" shape="poly">
+    <area target="_blank" alt="Болярово" title="Болярово" href="https://bolyarovo.bg/" coords="357,425,14" shape="circle">
+    <area target="_blank" alt="Елхово" title="Елхово" href="https://elhovo.bg/" coords="240,375,15" shape="circle">
+    <area target="_blank" alt="Стралджа" title="Стралджа" href="https://straldzha.bg/" coords="294,100,15" shape="circle">
+    <area target="_blank" alt="Ямбол" title="Ямбол" href="https://yambol.bg/" coords="195,212,207,190,229,177,205,165,195,144,185,167,162,177,184,189,189,199" shape="poly">
 </map>
 
 </div>
