--- a/client/public/dobrich-map.html
+++ b/client/public/dobrich-map.html
@@ -11,17 +11,17 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Добрич.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Варовик в община Добричка" title="Варовик в община Добричка" href="" coords="240,322,269,311" shape="rect">
-    <area target="" alt="Антрацитни въглища до Балчик" title="Антрацитни въглища до Балчик" href="" coords="379,285,396,267" shape="rect">
-    <area target="" alt="Черни въглища в община Каварна" title="Черни въглища в община Каварна" href="" coords="415,250,433,232" shape="rect">
-    <area target="" alt="Манганова руда до Балчик" title="Манганова руда до Балчик" href="" coords="324,288,341,289,340,274,331,280,324,273,325,288" shape="poly">
-    <area target="" alt="Манганова руда до Шабла" title="Манганова руда до Шабла" href="" coords="471,272,488,273,486,257,478,263,470,257" shape="poly">
-    <area target="" alt="Нефт до Шабла" title="Нефт до Шабла" href="" coords="496,283,511,285,506,267,500,265" shape="poly">
-    <area target="" alt="Природен газ до Шабла" title="Природен газ до Шабла" href="" coords="519,275,537,276,531,257,525,258" shape="poly">
-    <area target="" alt="Балчик" title="Балчик" href="https://www.balchik.bg/" coords="359,310,15" shape="circle">
-    <area target="" alt="Шабла" title="Шабла" href="https://shabla.bg/" coords="497,240,16" shape="circle">
-    <area target="" alt="Тервел" title="Тервел" href="https://www.tervel.bg/" coords="87,168,15" shape="circle">
-    <area target="" alt="Добрич" title="Добрич" href="https://www.dobrich.bg/bg/" coords="240,276,251,253,271,242,251,230,240,209,231,231,210,242,231,253" shape="poly">
+    <area target="_blank" alt="Варовик в община Добричка" title="Варовик в община Добричка" href="" coords="240,322,269,311" shape="rect">
+    <area target="_blank" alt="Антрацитни въглища до Балчик" title="Антрацитни въглища до Балчик" href="" coords="379,285,396,267" shape="rect">
+    <area target="_blank" alt="Черни въглища в община Каварна" title="Черни въглища в община Каварна" href="" coords="415,250,433,232" shape="rect">
+    <area target="_blank" alt="Манганова руда до Балчик" title="Манганова руда до Балчик" href="" coords="324,288,341,289,340,274,331,280,324,273,325,288" shape="poly">
+    <area target="_blank" alt="Манганова руда до Шабла" title="Манганова руда до Шабла" href="" coords="471,272,488,273,486,257,478,263,470,257" shape="poly">
+    <area target="_blank" alt="Нефт до Шабла" title="Нефт до Шабла" href="" coords="496,283,511,285,506,267,500,265" shape="poly">
+    <area target="_blank" alt="Природен газ до Шабла" title="Природен газ до Шабла" href="" coords="519,275,537,276,531,257,525,258" shape="poly">
+    <area target="_blank" alt="Балчик" title="Балчик" href="https://www.balchik.bg/" coords="359,310,15" shape="circle">
+    <area target="_blank" alt="Шабла" title="Шабла" href="https://shabla.bg/" coords="497,240,16" shape="circle">
+    <area target="_blank" alt="Тервел" title="Тервел" href="https://www.tervel.bg/" coords="87,168,15" shape="circle">
+    <area target="_blank" alt="Добрич" title="Добрич" href="https://www.dobrich.bg/bg/" coords="240,276,251,253,271,242,251,230,240,209,231,231,210,242,231,253" shape="poly">
 </map>
 
 </div>
