--- a/client/public/gabrovo-map.html
+++ b/client/public/gabrovo-map.html
@@ -10,11 +10,11 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Габрово.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Огнеупорни глини до Габрово" title="Огнеупорни глини до Габрово" href="" coords="402,425,443,408" shape="rect">
-    <area target="" alt="Трявна" title="Трявна" href="https://tryavna.bg/" coords="487,386,12" shape="circle">
-    <area target="" alt="Дряново" title="Дряново" href="https://www.dryanovo.bg/" coords="494,233,12" shape="circle">
-    <area target="" alt="Севлиево" title="Севлиево" href="https://www.sevlievo.bg/bg/" coords="203,205,12" shape="circle">
-    <area target="" alt="Габрово" title="Габрово" href="https://www.gabrovo.bg/bg" coords="354,394,361,375,382,364,362,355,353,335,341,357,322,364,344,375" shape="poly">
+    <area target="_blank" alt="Огнеупорни глини до Габрово" title="Огнеупорни глини до Габрово" href="" coords="402,425,443,408" shape="rect">
+    <area target="_blank" alt="Трявна" title="Трявна" href="https://tryavna.bg/" coords="487,386,12" shape="circle">
+    <area target="_blank" alt="Дряново" title="Дряново" href="https://www.dryanovo.bg/" coords="494,233,12" shape="circle">
+    <area target="_blank" alt="Севлиево" title="Севлиево" href="https://www.sevlievo.bg/bg/" coords="203,205,12" shape="circle">
+    <area target="_blank" alt="Габрово" title="Габрово" href="https://www.gabrovo.bg/bg" coords="354,394,361,375,382,364,362,355,353,335,341,357,322,364,344,375" shape="poly">
 </map>
 
 </div>
