--- a/client/public/kardzhali-map.html
+++ b/client/public/kardzhali-map.html
@@ -11,21 +11,21 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Кърджали.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Хромова руда в община Кирчево" title="Хромова руда в община Кирчево" href="" coords="168,553,194,529" shape="rect">
-    <area target="" alt="Хромова руда до Крумовград" title="Хромова руда до Крумовград" href="" coords="445,488,472,463" shape="rect">
-    <area target="" alt="Слюда в община Крумовград" title="Слюда в община Крумовград" href="" coords="544,310,570,285" shape="rect">
-    <area target="" alt="Слюда между Ардино и Джебел" title="Слюда между Ардино и Джебел" href="" coords="141,384,167,359" shape="rect">
-    <area target="" alt="Варовик до Кърджали" title="Варовик до Кърджали" href="" coords="337,227,383,209" shape="rect">
-    <area target="" alt="Огнеупорни глини до Кърджали" title="Огнеупорни глини до Кърджали" href="" coords="227,227,271,210" shape="rect">
-    <area target="" alt="Злато до Крумовград" title="Злато до Крумовград" href="" coords="441,514,15" shape="circle">
-    <area target="" alt="Оловно-цинкова руда до Крумовград" title="Оловно-цинкова руда до Крумовград" href="" coords="410,473,14" shape="circle">
-    <area target="" alt="Фелдшпат в община Ардино" title="Фелдшпат в община Ардино" href="" coords="179,278,199,265,179,251,160,266" shape="poly">
-    <area target="" alt="Зеолит между Джебел и Ардино" title="Зеолит между Джебел и Ардино" href="" coords="191,388,205,362,177,362" shape="poly">
-    <area target="" alt="Зеолит до Кърджали" title="Зеолит до Кърджали" href="" coords="308,232,321,206,296,206" shape="poly">
-    <area target="" alt="Крумовград" title="Крумовград" href="https://www.krumovgrad.bg/" coords="485,431,20" shape="circle">
-    <area target="" alt="Джебел" title="Джебел" href="https://dzhebel.bg/" coords="230,401,20" shape="circle">
-    <area target="" alt="Ардино" title="Ардино" href="https://www.ardino.bg/" coords="137,326,22" shape="circle">
-    <area target="" alt="Кърджали" title="Кърджали" href="https://kardjali.bg/" coords="292,328,306,296,337,281,308,262,290,234,274,263,245,279,275,294" shape="poly">
+    <area target="_blank" alt="Хромова руда в община Кирчево" title="Хромова руда в община Кирчево" href="" coords="168,553,194,529" shape="rect">
+    <area target="_blank" alt="Хромова руда до Крумовград" title="Хромова руда до Крумовград" href="" coords="445,488,472,463" shape="rect">
+    <area target="_blank" alt="Слюда в община Крумовград" title="Слюда в община Крумовград" href="" coords="544,310,570,285" shape="rect">
+    <area target="_blank" alt="Слюда между Ардино и Джебел" title="Слюда между Ардино и Джебел" href="" coords="141,384,167,359" shape="rect">
+    <area target="_blank" alt="Варовик до Кърджали" title="Варовик до Кърджали" href="" coords="337,227,383,209" shape="rect">
+    <area target="_blank" alt="Огнеупорни глини до Кърджали" title="Огнеупорни глини до Кърджали" href="" coords="227,227,271,210" shape="rect">
+    <area target="_blank" alt="Злато до Крумовград" title="Злато до Крумовград" href="" coords="441,514,15" shape="circle">
+    <area target="_blank" alt="Оловно-цинкова руда до Крумовград" title="Оловно-цинкова руда до Крумовград" href="" coords="410,473,14" shape="circle">
+    <area target="_blank" alt="Фелдшпат в община Ардино" title="Фелдшпат в община Ардино" href="" coords="179,278,199,265,179,251,160,266" shape="poly">
+    <area target="_blank" alt="Зеолит между Джебел и Ардино" title="Зеолит между Джебел и Ардино" href="" coords="191,388,205,362,177,362" shape="poly">
+    <area target="_blank" alt="Зеолит до Кърджали" title="Зеолит до Кърджали" href="" coords="308,232,321,206,296,206" shape="poly">
+    <area target="_blank" alt="Крумовград" title="Крумовград" href="https://www.krumovgrad.bg/" coords="485,431,20" shape="circle">
+    <area target="_blank" alt="Джебел" title="Джебел" href="https://dzhebel.bg/" coords="230,401,20" shape="circle">
+    <area target="_blank" alt="Ардино" title="Ардино" href="https://www.ardino.bg/" coords="137,326,22" shape="circle">
+    <area target="_blank" alt="Кърджали" title="Кърджали" href="https://kardjali.bg/" coords="292,328,306,296,337,281,308,262,290,234,274,263,245,279,275,294" shape="poly">
 </map>
 
 </div>
