--- a/client/public/ruse-map.html
+++ b/client/public/ruse-map.html
@@ -10,14 +10,14 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Русе.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Варовик под Русе" title="Варовик под Русе" href="" coords="231,169,266,158" shape="rect">
-    <area target="" alt="Варовик над Русе" title="Варовик над Русе" href="" coords="291,124,327,112" shape="rect">
-    <area target="" alt="Каолин до Ветово" title="Каолин до Ветово" href="" coords="431,254,8" shape="circle">
-    <area target="" alt="Бяла" title="Бяла" href="https://www.byala.org/" coords="152,375,8" shape="circle">
-    <area target="" alt="Две могили" title="Две могили" href="https://dvemogili.egov.bg/wps/portal/municipality-dve-mogili/home" coords="211,301,9" shape="circle">
-    <area target="" alt="Ветово" title="Ветово" href="https://www.vetovo.bg/" coords="374,239,8" shape="circle">
-    <area target="" alt="Сливо поле" title="Сливо поле" href="https://www.slivopole.bg/" coords="352,103,9" shape="circle">
-    <area target="" alt="Русе" title="Русе" href="https://obshtinaruse.bg/" coords="285,166,291,149,307,142,292,135,285,118,280,135,264,142,278,149" shape="poly">
+    <area target="_blank" alt="Варовик под Русе" title="Варовик под Русе" href="" coords="231,169,266,158" shape="rect">
+    <area target="_blank" alt="Варовик над Русе" title="Варовик над Русе" href="" coords="291,124,327,112" shape="rect">
+    <area target="_blank" alt="Каолин до Ветово" title="Каолин до Ветово" href="" coords="431,254,8" shape="circle">
+    <area target="_blank" alt="Бяла" title="Бяла" href="https://www.byala.org/" coords="152,375,8" shape="circle">
+    <area target="_blank" alt="Две могили" title="Две могили" href="https://dvemogili.egov.bg/wps/portal/municipality-dve-mogili/home" coords="211,301,9" shape="circle">
+    <area target="_blank" alt="Ветово" title="Ветово" href="https://www.vetovo.bg/" coords="374,239,8" shape="circle">
+    <area target="_blank" alt="Сливо поле" title="Сливо поле" href="https://www.slivopole.bg/" coords="352,103,9" shape="circle">
+    <area target="_blank" alt="Русе" title="Русе" href="https://obshtinaruse.bg/" coords="285,166,291,149,307,142,292,135,285,118,280,135,264,142,278,149" shape="poly">
 </map>
 
 </div>
