--- a/client/public/veliko-tarnovo-map.html
+++ b/client/public/veliko-tarnovo-map.html
@@ -10,13 +10,13 @@
 <div class="centered-flex">
 <img class="centered-flex" src="Велико Търново.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
-    <area target="" alt="Огнеупорни глини под Велико Търново" title="Огнеупорни глини под Велико Търново" href="" coords="239,449,276,464" shape="rect">
-    <area target="" alt="Елена" title="Елена" href="https://elena.bg/wps/portal/municipality-elena/home" coords="386,483,11" shape="circle">
-    <area target="" alt="Стражица" title="Стражица" href="https://strazhitsa.com/" coords="396,275,11" shape="circle">
-    <area target="" alt="Горна Оряховица" title="Горна Оряховица" href="https://www.g-oryahovica.bg/" coords="285,324,11" shape="circle">
-    <area target="" alt="Павликени" title="Павликени" href="https://pavlikeni.bg/wps/portal/municipality-pavlikeni/home" coords="119,262,11" shape="circle">
-    <area target="" alt="Свищов" title="Свищов" href="https://www.svishtov.bg/" coords="155,93,11" shape="circle">
-    <area target="" alt="Велико Търново" title="Велико Търново" href="https://www.veliko-tarnovo.bg/bg/" coords="266,424,272,407,289,398,272,389,267,373,257,389,240,398,256,405" shape="poly">
+    <area target="_blank" alt="Огнеупорни глини под Велико Търново" title="Огнеупорни глини под Велико Търново" href="" coords="239,449,276,464" shape="rect">
+    <area target="_blank" alt="Елена" title="Елена" href="https://elena.bg/wps/portal/municipality-elena/home" coords="386,483,11" shape="circle">
+    <area target="_blank" alt="Стражица" title="Стражица" href="https://strazhitsa.com/" coords="396,275,11" shape="circle">
+    <area target="_blank" alt="Горна Оряховица" title="Горна Оряховица" href="https://www.g-oryahovica.bg/" coords="285,324,11" shape="circle">
+    <area target="_blank" alt="Павликени" title="Павликени" href="https://pavlikeni.bg/wps/portal/municipality-pavlikeni/home" coords="119,262,11" shape="circle">
+    <area target="_blank" alt="Свищов" title="Свищов" href="https://www.svishtov.bg/" coords="155,93,11" shape="circle">
+    <area target="_blank" alt="Велико Търново" title="Велико Търново" href="https://www.veliko-tarnovo.bg/bg/" coords="266,424,272,407,289,398,272,389,267,373,257,389,240,398,256,405" shape="poly">
 </map>
 
 </div>
