Added "regions/" to the images' sources

--- a/client/public/regions/blagoevgrad-map.html
+++ b/client/public/regions/blagoevgrad-map.html
@@ -9,7 +9,7 @@
 <div style="height: 80pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Благоевград.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Благоевград.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
   <area target="_blank" alt="Флуорит до Сандански" title="Флуорит до Сандански" href="" coords="196,334,234,315" shape="rect">
   <area target="_blank" alt="Мрамор до Кресна" title="Мрамор до Кресна" href="" coords="170,295,190,276" shape="rect">
