--- a/client/public/regions/pernik-map.html
+++ b/client/public/regions/pernik-map.html
@@ -9,7 +9,7 @@
 <div style="height: 80pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Перник.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Перник.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик до Земен" title="Варовик до Земен" href="" coords="249,367,279,355" shape="rect">
     <area target="_blank" alt="Кафяви въглища в община Радомир" title="Кафяви въглища в община Радомир" href="" coords="389,408,405,390" shape="rect">
