--- a/client/public/regions/ruse-map.html
+++ b/client/public/regions/ruse-map.html
@@ -8,7 +8,7 @@
 <div style="height: 95pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Русе.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Русе.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик под Русе" title="Варовик под Русе" href="" coords="231,169,266,158" shape="rect">
     <area target="_blank" alt="Варовик над Русе" title="Варовик над Русе" href="" coords="291,124,327,112" shape="rect">
