--- a/client/public/regions/sofia-region-map.html
+++ b/client/public/regions/sofia-region-map.html
@@ -9,7 +9,7 @@
 <div style="height: 70pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Софийска област.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Софийска област.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Лигнитни въглища до Елин Пелин" title="Лигнитни въглища до Елин Пелин" href="" coords="275,327,297,305" shape="rect">
     <area target="_blank" alt="Лигнитни въглища до Драгоман" title="Лигнитни въглища до Драгоман" href="" coords="47,166,69,144" shape="rect">
