--- a/client/public/regions/targovishte-map.html
+++ b/client/public/regions/targovishte-map.html
@@ -8,7 +8,7 @@
 <div style="height: 95pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Търговище.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Търговище.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик до Опака" title="Варовик до Опака" href="" coords="157,135,196,149" shape="rect">
     <area target="_blank" alt="Каменна сол до Омуртаг" title="Каменна сол до Омуртаг" href="" coords="275,385,288,381,301,386,301,400,288,406,276,402" shape="poly">
