--- a/client/public/regions/vidin-map.html
+++ b/client/public/regions/vidin-map.html
@@ -8,7 +8,7 @@
 <div style="height: 45pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Vidin.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Vidin.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик до Ново село" title="Варовик до Ново село" href="" coords="203,84,243,68" shape="rect">
     <area target="_blank" alt="Гипс до Кошава" title="Гипс до Кошава" href="" coords="325,125,357,126,355,133,351,138,346,142,335,140,328,134" shape="poly">
