--- a/client/public/regions/burgas-map.html
+++ b/client/public/regions/burgas-map.html
@@ -9,7 +9,7 @@
 <div style="height: 77pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="Бургас.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="regions/Бургас.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Желязна руда до Малко Търново" title="Желязна руда до Малко Търново" href="" coords="403,485,425,488,414,456,409,467" shape="poly">
     <area target="_blank" alt="Медна руда до Малко Търново" title="Медна руда до Малко Търново" href="" coords="369,461,405,445" shape="rect">
