Fixed my mistake from the previous commit
Because I'm f-ing stupid

--- a/client/public/regions/kardzhali-map.html
+++ b/client/public/regions/kardzhali-map.html
@@ -9,7 +9,7 @@
 <div style="height: 45pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Кърджали.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Кърджали.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Хромова руда в община Кирчево" title="Хромова руда в община Кирчево" href="" coords="168,553,194,529" shape="rect">
     <area target="_blank" alt="Хромова руда до Крумовград" title="Хромова руда до Крумовград" href="" coords="445,488,472,463" shape="rect">
