--- a/client/public/regions/kyustendil-map.html
+++ b/client/public/regions/kyustendil-map.html
@@ -9,7 +9,7 @@
 <div style="height: 77pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Кюстендил.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Кюстендил.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Слюда в община Рила" title="Слюда в община Рила" href="" coords="491,328,510,311" shape="rect">
     <area target="_blank" alt="Оловно-цинкова руда в община Кюстендил" title="Оловно-цинкова руда в община Кюстендил" href="" coords="91,236,10" shape="circle">
