--- a/client/public/regions/plovdiv-map.html
+++ b/client/public/regions/plovdiv-map.html
@@ -9,7 +9,7 @@
 <div style="height: 50pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Пловдив.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Пловдив.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Оловно-цинкова руда до Лъки" title="Оловно-цинкова руда до Лъки" href="" coords="203,609,15" shape="circle">
     <area target="_blank" alt="Оловно-цинкова руда на север от Лъки" title="Оловно-цинкова руда на север от Лъки" href="" coords="252,545,14" shape="circle">
