--- a/client/public/regions/razgrad-map.html
+++ b/client/public/regions/razgrad-map.html
@@ -8,7 +8,7 @@
 <div style="height: 75pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Разград.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Разград.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Кварцови пясъци до Разград" title="Кварцови пясъци до Разград" href="" coords="205,321,241,333" shape="rect">
     <area target="_blank" alt="Каолин над Разград" title="Каолин над Разград" href="" coords="173,235,11" shape="circle">
