--- a/client/public/regions/silistra-map.html
+++ b/client/public/regions/silistra-map.html
@@ -8,7 +8,7 @@
 <div style="height: 95pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Силистра.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Силистра.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Дулово" title="Дулово" href="https://dulovo.bg/" coords="339,204,10" shape="circle">
     <area target="_blank" alt="Алафатар" title="Алафатар" href="http://alfatar.egov.bg/ALFATAR/home.nsf/pages/bg/home?OpenDocument" coords="418,139,10" shape="circle">
