--- a/client/public/regions/smolyan-map.html
+++ b/client/public/regions/smolyan-map.html
@@ -9,7 +9,7 @@
 <div style="height: 65pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Смолян.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Смолян.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Флуроит над Девин и Чепеларе" title="Флуроит над Девин и Чепеларе" href="" coords="286,120,321,136" shape="rect">
     <area target="_blank" alt="Многометална руда в Рудозем" title="Многометална руда в Рудозем" href="" coords="455,415,10" shape="circle">
