--- a/client/public/regions/gabrovo-map.html
+++ b/client/public/regions/gabrovo-map.html
@@ -8,7 +8,7 @@
 <div style="height: 95pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="regions/Габрово.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="images-of-regions/Габрово.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Огнеупорни глини до Габрово" title="Огнеупорни глини до Габрово" href="" coords="402,425,443,408" shape="rect">
     <area target="_blank" alt="Трявна" title="Трявна" href="https://tryavna.bg/" coords="487,386,12" shape="circle">
