--- a/client/public/regions/dobrich-map.html
+++ b/client/public/regions/dobrich-map.html
@@ -9,7 +9,7 @@
 <div style="height: 90pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="images-of-regions/Добрич.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" ../images-of-regions/Добрич.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик в община Добричка" title="Варовик в община Добричка" href="" coords="240,322,269,311" shape="rect">
     <area target="_blank" alt="Антрацитни въглища до Балчик" title="Антрацитни въглища до Балчик" href="" coords="379,285,396,267" shape="rect">
