--- a/client/public/regions/haskovo-map.html
+++ b/client/public/regions/haskovo-map.html
@@ -9,7 +9,7 @@
 <div style="height: 57pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="images-of-regions/Хасково.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" ../images-of-regions/Хасково.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Лигнитни въглища на север от Димитровград" title="Лигнитни въглища на север от Димитровград" href="" coords="199,114,220,92" shape="rect">
     <area target="_blank" alt="Варовик до Димитровград" title="Варовик до Димитровград" href="" coords="244,181,285,167" shape="rect">
