--- a/client/public/regions/pazardzhik-map.html
+++ b/client/public/regions/pazardzhik-map.html
@@ -8,7 +8,7 @@
 <div style="height: 35pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="images-of-regions/Пазарджик.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" ../images-of-regions/Пазарджик.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Мрамор до Батак" title="Мрамор до Батак" href="" coords="206,513,230,538" shape="rect">
     <area target="_blank" alt="Варовик до Пазарджик" title="Варовик до Пазарджик" href="" coords="362,320,403,306" shape="rect">
