--- a/client/public/regions/pleven-map.html
+++ b/client/public/regions/pleven-map.html
@@ -8,7 +8,7 @@
 <div style="height: 68pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="images-of-regions/Плевен.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" ../images-of-regions/Плевен.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик до Плевен" title="Варовик до Плевен" href="" coords="343,305,371,317" shape="rect">
     <area target="_blank" alt="Варовик до Никопол" title="Варовик до Никопол" href="" coords="415,116,446,129" shape="rect">
