--- a/client/public/regions/lovech-map.html
+++ b/client/public/regions/lovech-map.html
@@ -8,7 +8,7 @@
 <div style="height: 95pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" src="images-of-regions/Ловеч.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" ../images-of-regions/Ловеч.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Желязна руда" title="Желязна руда" href="" coords="385,362,405,363,395,344" shape="poly">
     <area target="_blank" alt="Троян" title="Троян" href="https://www.troyan.bg/bg/" coords="367,330,10" shape="circle">
