--- a/client/public/regions/shumen-map.html
+++ b/client/public/regions/shumen-map.html
@@ -8,7 +8,7 @@
 <div style="height: 65pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" ../images-of-regions/Шумен.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="../images-of-regions/Шумен.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Варовик до Шумен" title="Варовик до Шумен" href="" coords="230,373,274,389" shape="rect">
     <area target="_blank" alt="Каолин до Каолиново" title="Каолин до Каолиново" href="" coords="289,45,12" shape="circle">
