--- a/client/public/regions/sofia-grad-map.html
+++ b/client/public/regions/sofia-grad-map.html
@@ -9,7 +9,7 @@
 <div style="height: 90pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" ../images-of-regions/София.jpg" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="../images-of-regions/София.jpg" usemap="#image-map" style="border: none;">
 <map name="image-map">
   <area target="_blank" alt="Желязна руда в село Кремиковци" title="Желязна руда в село Кремиковци" href="" coords="250,172,283,172,266,145" shape="poly">
   <area target="_blank" alt="Варовик във Витоша" title="Варовик във Витоша" href="" coords="159,276,205,263" shape="rect">
