--- a/client/public/regions/stara-zagora-map.html
+++ b/client/public/regions/stara-zagora-map.html
@@ -8,7 +8,7 @@
 <div style="height: 85pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" ../images-of-regions/Стара Загора.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="../images-of-regions/Стара Загора.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Лигнитни въглища до Гълъбово" title="Лигнитни въглища до Гълъбово" href="" coords="443,390,461,373" shape="rect">
     <area target="_blank" alt="Гипс до Раднево" title="Гипс до Раднево" href="" coords="433,307,456,307,453,313,449,317,442,319,435,314" shape="poly">
