--- a/client/public/regions/vraca-map.html
+++ b/client/public/regions/vraca-map.html
@@ -8,7 +8,7 @@
 <div style="height: 55pt;">
 </div>
 <div class="centered-flex">
-<img class="centered-flex" ../images-of-regions/Враца.png" usemap="#image-map" style="border: none;">
+<img class="centered-flex" src="../images-of-regions/Враца.png" usemap="#image-map" style="border: none;">
 <map name="image-map">
     <area target="_blank" alt="Медна руда до Враца" title="Медна руда до Враца" href="" coords="123,480,155,495" shape="rect">
     <area target="_blank" alt="Медна руда до Мездра" title="Медна руда до Мездра" href="" coords="169,544,202,559" shape="rect">
